<resources>
    <string name="app_name">ClothesApp</string>
    <string name="facebook_app_id" translatable="false">2738845606395528</string>
    <!-- Tag dialog -->
    <string name="dialog_request_login" translatable="false">dialog_request_login</string>
    <string name="dialog_confirm" translatable="false">dialog_confirm</string>
    <!-- Strings -->
    <string name="brandHot">Thương hiệu nổi bật</string>
    <string name="promotions">Khuyến mãi đặc biệt</string>
    <string name="error_data" translatable="false">Something went wrong!</string>
    <string name="empty_data">Danh sách trống!</string>
    <string name="product_had_choose">Sản phẩm bạn đã chọn:</string>
    <string name="product_had_buy">Sản phẩm đã đặt:</string>
    <string name="product_related">Sản phẩm liên quan:</string>
    <string name="cart_empty">Hiện tại giỏ của bạn đang trống</string>
    <string name="add_cart_success">Thêm sản phẩm thành công!</string>
    <string name="aks_continue">Bạn chắc chắn muốn đặt hàng luôn chứ!</string>
    <string name="error_startup">Không thể kết nối đến máy chủ.\nKiểm tra kết nối mạng của bạn và thử lại!</string>

    <string name="choose_address">Chọn địa chỉ giao hàng</string>
    <string name="choose_address_exists">Chọn địa chỉ của bạn:</string>
    <string name="address">Địa chỉ</string>
    <string name="your_address">Địa chỉ của bạn</string>
    <string name="number_phone">Số điện thoại</string>
    <string name="your_number_phone">Số điện thoại của bạn</string>

    <string name="province">Tỉnh thành/Thành phố</string>
    <string name="district">Quận/Huyện</string>
    <string name="ward">Phường/Thị Xã</string>
    <string name="address_detail">Địa chỉ chi tiết</string>

    <string name="payment_method">Phương thức thanh toán</string>
    <string name="choose_payment_method">Chọn phương thức thanh toán</string>
    <string name="choose_method_exists">Chọn phương thức thanh toán:</string>

    <string name="quantity">Số lượng</string>
    <string name="total_payment">Tổng tiền</string>
    <string name="coupon">Mã giảm giá</string>
    <string name="status_invoice">Trạng thái đơn hàng</string>
    <string name="choose_coupon">Chọn mã giảm giá</string>
    <string name="choose_coupon_exists">Chọn mã giảm giá:</string>

    <string name="login_with">Hoặc đăng nhập/đăng ký với</string>
    <string name="register_ask">Bạn chưa có tài khoản?</string>
    <string name="register">Đăng ký ngay!</string>
    <string name="login">Login with social</string>
    <string name="login_vi">Đăng nhập</string>
    <string name="finish">Xong</string>
    <string name="understand">Đã hiểu</string>
    <string name="login_success">Đăng nhập thành công!</string>
    <string name="login_failure">Đăng nhập không thành công!</string>
    <string name="logout">Logout</string>
    <string name="logout_vi">Đăng xuất</string>
    <string name="next">Continue</string>
    <string name="save">Save/Back</string>
    <string name="change">Change</string>

    <string name="no">No</string>
    <string name="request_login_cart">Bạn cần đăng nhập để đến bước tiếp theo?</string>
    <string name="request_login_collection">Bạn cần đăng nhập để xem bộ sưu tập riêng của mình?</string>
    <string name="request_login_input_collection">Bạn cần đăng nhập để tạo bộ sưu tập riêng?</string>
    <string name="request_login_address">Bạn có muốn đăng nhập để lưu lại địa chỉ cho lần sau?</string>

    <string name="person_name">Ẩn danh</string>
    <string name="person_information">Thông tin cá nhân</string>
    <string name="person_address">Địa chỉ giao hàng</string>
    <string name="person_coupons">Mã khuyến mãi</string>
    <string name="person_history_order">Lịch sử đặt hàng</string>
    <string name="person_terms">Điều khoản sử dụng</string>

    <string name="info_name">Họ và tên</string>
    <string name="info_email">Địa chỉ email</string>
    <string name="info_phone">Số điện thoại</string>
    <string name="info_birthday">Ngày tháng năm sinh</string>

    <string name="hot_line">HOT LINE: 19009201</string>
    <string name="viewed_product">Sản phẩm đã xem</string>

    <string name="choose_image">Chọn ảnh từ thư viện</string>
    <string name="make_image">Chụp ảnh với camera</string>

    <string name="string_continue">Tiếp tục</string>
    <string name="cancel">Hủy</string>
    <string name="cancel_invoice">Hủy đơn hàng</string>
    <string name="canceled_invoice">Đã hủy đơn hàng</string>
    <string name="aks_cancel_order">Bạn muốn hủy đơn hàng này?\nHành động này không thể hoàn tác!</string>
    <string name="filter">Lọc</string>

    <string name="confirm_logout">Bạn muốn đăng xuất?</string>
    <string name="confirm_order">Chúng ta hoàn thành?</string>
    <string name="completed_order_line_1">Chúng ta đã đến bước cuối cùng!</string>
    <string name="completed_order_line_2">Thông tin đơn hàng đã được gửi đến email của bạn.</string>

    <string name="order_status_0">Hủy đơn</string>
    <string name="order_status_1">Chuẩn bị Đơn hàng</string>
    <string name="order_status_2">Đang vận chuyển</string>
    <string name="order_status_3">Nhân viên giao hàng</string>
    <string name="order_status_4">Giao hàng thành công</string>

    <string name="title_commit_terms_1">Chính sách giao hàng tận giường</string>
    <string name="title_commit_terms_2">Chính sách đổi trả trong tuần</string>
    <string name="title_commit_terms_3">Chính sách hoàn tiền</string>
    <string name="commit_terms">Để đảm bảo quyền lợi cũng như đáp lại sự tin tưởng của quý khách hàng,
        chúng tôi cam kết luôn luôn giao hàng đúng hạn, đúng loại và đúng chất lượng.
        \nTrong trường hợp không giao hàng đúng hạn theo yêu cầu của quý khách hàng do
        lỗi của nhân viên giao hàng, hệ thống xin bồi thường tổn thất mà khách hàng phải
        gánh chịu khi giao hàng chậm. Nếu trường hợp không giao hàng đúng hạn do trường
        hợp khách quan bất khả kháng, chúng tôi sẽ liên hệ trực đến quý khách hàng.</string>

    <string name="permission_denied">Bạn đã từ chối quyền truy cập của ứng dụng!</string>
    <string name="error_upload_image">Không thể upload bức ảnh này!</string>

    <string name="page_information_user">Thông tin cá nhân</string>
    <string name="page_choose_method_payment">Phương thức thanh toán</string>
    <string name="page_coupons">Mã khuyến mã</string>
    <string name="page_cart">Giỏ hàng</string>
    <string name="page_address_user">Địa chỉ giao hàng</string>
    <string name="page_terms">Cam kết và điều khoản</string>
    <string name="page_history_order">Lịch sử đặt hàng</string>
    <string name="page_detail_product">Chi tiết sản phẩm</string>
    <string name="page_detail_order">Chi tiết đơn hàng</string>
    <string name="page_filter">Lọc sản phẩm</string>
    <string name="page_invoice">Chi tiết đơn hàng</string>
    <string name="increase">Tăng dần</string>
    <string name="decrease">Giảm dần</string>
    <string name="collection">Bộ sưu tập</string>
    <string name="loadCompleted">Load completed!</string>
</resources>