<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:id="@+id/fragment_person"
    tools:context=".mvp.person.PersonFragment">

    <LinearLayout
        android:paddingBottom="60dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rl_profile_image"
            android:layout_width="92dp"
            android:layout_height="92dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:id="@+id/ci_circleAvatar"
                android:src="@drawable/image_profile"
                android:layout_marginBottom="10dp"/>
            <ImageView
                android:layout_margin="4dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_width="22dp"
                android:src="@drawable/ic_camera"
                android:layout_height="22dp"/>
        </RelativeLayout>
        <TextView
            android:textAllCaps="true"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/person_name"
            android:layout_width="wrap_content"
            android:id="@+id/txt_name_profile"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/ll_information_person"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="50dp"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/image_profile_information"
                android:layout_marginRight="8dp"/>
            <TextView
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginRight="32dp"
                android:text="@string/person_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_address_person"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="50dp"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/image_bike"
                android:layout_marginRight="8dp"/>
            <TextView
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginRight="32dp"
                android:text="@string/person_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_history_person"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="50dp"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/image_reload"
                android:layout_marginRight="8dp"/>
            <TextView
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginRight="32dp"
                android:text="@string/person_history_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_terms_person"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="50dp"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/image_paper"
                android:layout_marginRight="8dp"/>
            <TextView
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginRight="32dp"
                android:text="@string/person_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_marginVertical="10dp"
            android:layout_marginRight="4dp"
            android:textStyle="italic"
            android:textSize="12sp"
            android:text="@string/hot_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_marginTop="16dp"
            android:textSize="10sp"
            android:id="@+id/btn_auth_person"
            android:textStyle="bold"
            android:minHeight="32dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_button_continue"
            android:layout_marginHorizontal="20dp"
            android:text="@string/login_vi"
            android:layout_width="70dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:background="@color/colorWhite"
        android:id="@+id/ll_load_person"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <include layout="@layout/loading" />
    </LinearLayout>

</RelativeLayout>