<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.completed.CompletedActivity">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/image_completed"
                android:layout_width="200dp"
                android:layout_height="200dp"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:paddingVertical="10dp"
            android:paddingHorizontal="35dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorDispose"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/completed_order_line_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/colorDispose"
                android:textSize="15sp"
                android:textAlignment="center"
                android:text="@string/completed_order_line_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:layout_marginTop="16dp"
            android:textSize="10sp"
            android:id="@+id/btn_completed"
            android:textStyle="bold"
            android:minHeight="32dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_button_continue"
            android:layout_marginHorizontal="20dp"
            android:text="@string/finish"
            android:layout_width="70dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="60dp"/>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:background="@color/colorWhite"
        android:id="@+id/ll_load_completed"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/loading"/>
    </LinearLayout>
</RelativeLayout>