<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:id="@+id/layout_cart"
    android:layout_height="match_parent"
    tools:context=".mvp.address.AddressActivity">
    <LinearLayout
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <include layout="@layout/toolbar"/>
            <androidx.core.widget.NestedScrollView
                android:paddingHorizontal="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:paddingVertical="6dp"
                    android:paddingHorizontal="6dp"
                    android:layout_marginHorizontal="12dp"
                    android:padding="@dimen/card_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_marginTop="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/your_number_phone"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="*"
                            android:textColor="@color/colorRed"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <EditText
                        android:inputType="phone"
                        android:paddingVertical="12dp"
                        android:paddingHorizontal="16dp"
                        android:background="@drawable/bg_border_primary"
                        android:id="@+id/edit_phone_address"
                        android:focusable="auto"
                        android:nextFocusDown="@id/edit_province_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_marginBottom="16dp"
                        android:hint="Số điện thoại của bạn" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/province"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="*"
                            android:textColor="@color/colorRed"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <EditText
                        android:paddingVertical="12dp"
                        android:paddingHorizontal="16dp"
                        android:background="@drawable/bg_border_primary"
                        android:id="@+id/edit_province_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nextFocusDown="@id/edit_district"
                        android:layout_marginBottom="16dp"
                        android:maxLines="1"
                        android:hint="Tỉnh thành/Thành phố" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/district"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="*"
                            android:textColor="@color/colorRed"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <EditText
                        android:paddingVertical="12dp"
                        android:paddingHorizontal="16dp"
                        android:background="@drawable/bg_border_primary"
                        android:id="@+id/edit_district"
                        android:nextFocusDown="@id/edit_ward"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_marginBottom="16dp"
                        android:hint="Quận/Huyện" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/ward"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="*"
                            android:textColor="@color/colorRed"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <EditText
                        android:paddingVertical="12dp"
                        android:paddingHorizontal="16dp"
                        android:background="@drawable/bg_border_primary"
                        android:id="@+id/edit_ward"
                        android:nextFocusDown="@id/edit_detail_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:maxLines="1"
                        android:hint="Phường/Thị Xã" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/address_detail"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="*"
                            android:textColor="@color/colorRed"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <EditText
                        android:paddingVertical="12dp"
                        android:paddingHorizontal="16dp"
                        android:background="@drawable/bg_border_primary"
                        android:id="@+id/edit_detail_address"
                        android:layout_width="match_parent"
                        android:nextFocusDown="@id/btn_save_address"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:maxLines="1"
                        android:hint="Tên đường, số nhà..." />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"/>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
        <Button
            android:enabled="false"
            android:id="@+id/btn_save_address"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_button_dispose"
            android:layout_marginHorizontal="12dp"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="@color/colorWhite"
        android:id="@+id/ll_load_address"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/loading"/>
    </LinearLayout>

</RelativeLayout>