<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="35dp"
    android:id="@+id/layout_auth"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    tools:context=".mvp.auth.AuthActivity">
    <androidx.cardview.widget.CardView
        android:elevation="@dimen/card_elevation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@drawable/bg_border_opacity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:paddingHorizontal="10dp"
                android:paddingBottom="50dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginVertical="12dp"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_marginHorizontal="6dp"
                    android:layout_marginVertical="10dp"
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_border_white"
                    android:cursorVisible="false"
                    android:hint="Email hoặc số điện thoại..."
                    android:focusedByDefault="false"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorDispose"
                    android:textSize="14dp" />
                <EditText
                    android:layout_marginHorizontal="6dp"
                    android:layout_marginVertical="10dp"
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_border_white"
                    android:cursorVisible="false"
                    android:hint="Password..."
                    android:focusedByDefault="false"
                    android:drawableRight="@drawable/ic_eye"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorDispose"
                    android:textSize="14dp" />
                <Button
                    android:layout_marginVertical="10dp"
                    android:id="@+id/btn_login"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/bg_button_continue"
                    android:layout_marginHorizontal="50dp"
                    android:text="@string/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginVertical="8dp"
                    android:textColor="@color/colorDispose"
                    android:layout_width="wrap_content"
                    android:text="@string/login_with"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:gravity="center"
                    android:layout_marginVertical="8dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.google.android.gms.common.SignInButton
                        android:layout_marginBottom="2dp"
                        android:id="@+id/sign_in_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/btn_login_facebook"
                        android:layout_marginTop="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginVertical="8dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginVertical="8dp"
                        android:textColor="@color/colorDispose"
                        android:layout_width="wrap_content"
                        android:text="@string/register_ask"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginLeft="4dp"
                        android:textStyle="bold"
                        android:layout_marginVertical="8dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:text="@string/register"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_loading_auth"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include layout="@layout/loading"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>